Fix cursor for inner tab title and align the inner tabs better to the inner tab title.

--- a/public/less/tabs.less
+++ b/public/less/tabs.less
@@ -41,6 +41,7 @@
           font-size: 25px;
           line-height: 21px;
           font-weight: 300;
+          cursor: default;
         }
         &.active {
             h5 {
@@ -63,6 +64,7 @@
     .tab-viewer-header {
       background: none;
       .box-shadow(none);
+      h5 { padding-top: 4px; }
     }
     .tabs {
       border-bottom: 2px solid #eee;
